# Docker-Prototype-Builds

./: README.md
nginx/01_basic_web_server_with_custom_html/: README.md
nginx/02_basic_web_server_from_custom_nginx_image/: README.md  index.html
nginx/03_multi_docker_container_reverse_proxy_and_api_services/: Dockerfile.fastapi  README.md  docker-compose.yml  index.html  nginx.conf
nginx/04_multi_docker_container_reverse_proxy_and_2_api_services/: Dockerfile.nginx  README.md  docker-compose.yml  index.html
nginx/05_start_nginx_first_in_multi_container_build_with_apis_offline/: Dockerfile.fastapi1  Dockerfile.fastapi2  README.md  docker-compose.yml  index.html  main2.py  nginx.conf
postgres/: README.md
postgres/10/: Dockerfile.reader  Dockerfile.writer  README.md  docker-compose.yml  docker-entrypoint.sh  setup-writer.sh
postgres/11/: Dockerfile.reader  Dockerfile.writer  README.md  docker-compose.yml  docker-entrypoint.sh  setup-writer.sh
postgres/12/: Dockerfile.reader  Dockerfile.writer  setup-writer.sh  (+2 more)
postgres11/: Dockerfile.reader  Dockerfile.writer  README.md  setup-writer.sh
postgres12/: Dockerfile.writer  docker-entrypoint.sh
postgres9/: Dockerfile.writer  README.md  docker-compose.yml
python/: README.md
python/02_integrate_uv_in_dockerfile/: Dockerfile  README.md  pyproject.toml
python/04_fastapi_alembic_demo/: README.md  alembic.ini  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
python/04_fastapi_alembic_demo/alembic/: env.py
python/04_fastapi_alembic_demo/alembic/versions/: 3ecb766e093e_create_users_table.py
(+83 files in other folders)
