[project]
name = "uv_in_dockerfile"
version = "0.1.0"
description = "uv tutorial"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
