[project]
name = "fastapi_alembic_demo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = []
